kubernetes-templating/hwChart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-web-server-ingress
  namespace: { { .Values.namespace } }
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  rules:
    - host: { { .Values.ingress.host } }
    - http:
        paths:
          - path: /homepage(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: { { .Values.ingress.serviceName } }
                port:
                  number: { { .Values.ingress.serviceNumber } }
          - path: /
            pathType: Prefix
            backend:
              service:
                name: { { .Values.ingress.serviceName } }
                port:
                  number: { { .Values.ingress.serviceNumber } }
